# loop-engine

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture-v0.1.md  architecture-v0.2.md  architecture-v0.3.md  project-retrospective.md  roadmap.md
examples/: executive_vertical_slice.py  personal_mandate.json  resumable_multi_cycle.py
examples/fixtures/: synthetic_product_opportunities.md
schemas/: execution_result.schema.json  executive_proposal.schema.json
src/loop_engine/: __init__.py  __main__.py  codex_durable_run.py  codex_vertical_slice.py  company_models.py  company_store.py  executive_loop.py  models.py  personal_project.py  task_graph.py
tests/: test_codex_durable_run.py  test_codex_vertical_slice.py  test_company_models.py  test_company_store.py  test_executive_loop.py  test_models.py  test_personal_project.py  test_task_graph.py
